[package]
name = "kez"
version = "0.0.3"
edition = "2021"
license = "GLWTPL"
description = "Easy to use dota2 web api."
repository = "https://github.com/dearfl/kez"
keywords = ["dota2"]
exclude = [".*"]

[dependencies]
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.10"

[dev-dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.25", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }

[features]
deny-unknown-fields = []

[lints.rust]
unsafe_code = "forbid"
