[package]
name = "kez"
version = "0.0.7"
edition = "2024"
license = "GLWTPL"
description = "Easy to use dota2 web api."
repository = "https://github.com/dearfl/kez"
keywords = ["dota2"]
exclude = [".*"]

[dependencies]
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }

[features]
deny-unknown-fields = []

[lints.rust]
unsafe_code = "forbid"
